--- a/DHTControl/DHTControl/MainPage.xaml
+++ b/DHTControl/DHTControl/MainPage.xaml
@@ -53,5 +53,15 @@
         <TextBlock x:Name="OnlineDevicesTextBlock" HorizontalAlignment="Left" Grid.Row="2" Text="OnlineDevices:0" TextWrapping="Wrap" VerticalAlignment="Top" Height="19" Width="98"/>
         <TextBlock x:Name="AvrDhtTextBlock" HorizontalAlignment="Left"  Grid.Row="2" Text="AvrDht:0" TextWrapping="Wrap" VerticalAlignment="Bottom" Height="19" Width="53"/>
         <Button x:Name="SetUpNewDeviceButton" Content="SetUpNewDevice" Grid.Row="3" VerticalAlignment="Top" HorizontalAlignment="Left" Click="SetUpNewDeviceButton_Click"/>
+        <TextBox x:Name="dhtRngMinTextBox" Grid.Column="2" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Center" Text="40"/>
+        <TextBox x:Name="dhtRngMaxTextBox" Grid.Column="2" HorizontalAlignment="Right"  Grid.Row="2" VerticalAlignment="Center" Text="70"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Center" Grid.Row="2" Text="~" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="36"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Right"  Grid.Row="2" Text="Dht Range:" TextWrapping="Wrap" VerticalAlignment="Center" FontFamily="Segoe UI"/>
+        <ToggleSwitch x:Name="autoControlToggleSwitch" Grid.Column="3" Header="auto control:" Grid.Row="2" VerticalAlignment="Center" Toggled="autoControlToggleSwitch_Toggled" Loaded="autoControlToggleSwitch_loaded"/>
+        <AppBarButton x:Name="infoAppBarButton" Label="about"  Grid.Row="5" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="InfoAppBarButton_Click">
+            <AppBarButton.Icon>
+                <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE946;"/>
+            </AppBarButton.Icon>
+        </AppBarButton> 
     </Grid>
 </Page>
