--- a/DHTControl/DHTControl/SetUpNewDeviceContentDialog.xaml
+++ b/DHTControl/DHTControl/SetUpNewDeviceContentDialog.xaml
@@ -10,7 +10,7 @@
     PrimaryButtonText="OK"
     SecondaryButtonText="Cancel"
     PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
-    SecondaryButtonClick="ContentDialog_SecondaryButtonClick"
+    SecondaryButtonClick="ContentDialog_SecondaryButtonClick" FullSizeDesired="True"
     >
 
     <Grid Margin="0,-10,0,0" >
@@ -19,12 +19,18 @@
             <ColumnDefinition Width="187*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="4*"/>
-            <RowDefinition Height="11*"/>
+            <RowDefinition Height="56*"/>
+            <RowDefinition Height="55*"/>
+            <RowDefinition Height="30*"/>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="406*"/>
         </Grid.RowDefinitions>
-        <TextBlock HorizontalAlignment="Right" Text="SSID:" TextWrapping="Wrap" VerticalAlignment="Center" />
-        <TextBlock HorizontalAlignment="Right"  Grid.Row="1" Text="PassWord:" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <TextBox x:Name="ssidTextBox" Grid.Column="1" VerticalAlignment="Center"  HorizontalAlignment="Stretch"/>
-        <PasswordBox x:Name="wifiPassWordBox"  Grid.Column="1" HorizontalAlignment="Stretch" Grid.Row="1" VerticalAlignment="Center"/>
+        <TextBlock HorizontalAlignment="Right" Text="SSID:" TextWrapping="Wrap" VerticalAlignment="Center"  Grid.Row="2"/>
+        <TextBlock HorizontalAlignment="Right"  Grid.Row="3" Text="PassWord:" TextWrapping="Wrap" VerticalAlignment="Center"/>
+        <TextBlock HorizontalAlignment="Right" Text="DeviceName:" TextWrapping="Wrap" VerticalAlignment="Center"  Grid.Row="4"/>
+        <TextBox x:Name="ssidTextBox" Grid.Column="1" VerticalAlignment="Center"  Grid.Row="2" Height="32" />
+        <TextBox x:Name="deviceNameTextBox" Grid.Column="1" VerticalAlignment="Center"  Grid.Row="4" />
+        <PasswordBox x:Name="wifiPassWordBox"  Grid.Column="1" Grid.Row="3" VerticalAlignment="Center"/>
     </Grid>
 </ContentDialog>
